licenses(["notice"])  # BSD 3-Clause

py_library(
    name = "jinja2",
    srcs = [
        "__init__.py",
        "_compat.py",
        "_identifier.py",
        "asyncfilters.py",
        "asyncsupport.py",
        "bccache.py",
        "compiler.py",
        "constants.py",
        "debug.py",
        "defaults.py",
        "environment.py",
        "exceptions.py",
        "ext.py",
        "filters.py",
        "idtracking.py",
        "lexer.py",
        "loaders.py",
        "meta.py",
        "nativetypes.py",
        "nodes.py",
        "optimizer.py",
        "parser.py",
        "runtime.py",
        "sandbox.py",
        "tests.py",
        "utils.py",
        "visitor.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_mitsuhiko_markupsafe//markupsafe",
    ],
)
